# MTBL_IOKit

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yaml  config.yml
mtbl_iokit/mod/: __init__.py  mod.py
mtbl_iokit/read/: read.py
mtbl_iokit/write/: __init__.py  write.py
read/: __init__.py  read.py
temp/: test.json
tests/: test_mod.py  test_read.py  test_write.py
tests/fixtures/: bats_savant.csv
write/: __init__.py  write.py
